feat: 추상화
AbstractMaker 추가
xxxMaker의 공통 기능 추상화